
// 'Component' interface
public interface IComponent
{
    string Operation();
}
